styled result card, removed sections class

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<div class="result-card">
-			<section class="score">
+			<section>
 				<h4>Your Result</h4>
 				<div class="score-container">
 					<h2 class="value">76</h2>
@@ -26,7 +26,7 @@
 					</p>
 				</article>
 			</section>
-			<section class="summary">
+			<section>
 				<header>Summary</header>
 				<div class="summary-items">
 					<div class="alert danger">
@@ -51,7 +51,7 @@
 					</div>
 				</div>
 				<button>Continue</button>
-			</section>
+			</section=>
 		</div>
 	</body>
 </html>
